fix page margin at top, when there is no page title. adjust card and block spacing a little.

--- a/src/xr_pages/static/styles/base/_typography.scss
+++ b/src/xr_pages/static/styles/base/_typography.scss
@@ -14,7 +14,7 @@ h3,
 h4,
 h5,
 h6 {
-    margin-bottom: 0.2em;
+    margin: 0 0 0.2em;
     line-height: 1.1;
 }
 
