--- a/src/xr_pages/static/styles/base/_variables.scss
+++ b/src/xr_pages/static/styles/base/_variables.scss
@@ -1,8 +1,10 @@
 /*
-    
+
 */
 
 $bp-xs: 30rem;
 $bp-sm: 46rem;
 $bp-md: 61rem;
 $bp-lg: 71rem !default;
+
+$vertical-block-margin: 3rem;
