--- a/src/xr_pages/static/styles/main.scss
+++ b/src/xr_pages/static/styles/main.scss
@@ -51,7 +51,8 @@
 }
 
 #main {
-    padding-bottom: 3rem;
+    padding-top: $vertical-block-margin;
+    padding-bottom: $vertical-block-margin;
 }
 
 #footer .flat-menu {
@@ -68,11 +69,6 @@ a {
 }
 
 // Content
-
-.page-title {
-    margin-top: 1em;
-    margin-bottom: 1rem;
-}
 
 // definition list
 dl {
